--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CortexLuma AI</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,97 +11,121 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      color: #e2e8f0;
     }
+
+    /* Scrollbar */
     ::-webkit-scrollbar {
       width: 8px;
     }
-    ::-webkit-scrollbar-track {
-      background: #1e293b;
-    }
     ::-webkit-scrollbar-thumb {
       background: #475569;
-      border-radius: 4px;
+      border-radius: 6px;
     }
     ::-webkit-scrollbar-thumb:hover {
       background: #64748b;
     }
 
-    /* Typing dots animation */
-    .typing-dots {
-      display: inline-block;
-      width: 40px;
-      text-align: left;
+    /* Fade animation for chat bubbles */
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
-    .typing-dots span {
+    .chat-bubble { animation: fadeInUp 0.3s ease; }
+
+    /* Typing indicator */
+    .typing span {
       display: inline-block;
       width: 6px;
       height: 6px;
-      margin-right: 4px;
-      background: #c7d2fe;
+      margin: 0 2px;
+      background-color: #a5b4fc;
       border-radius: 50%;
-      animation: blink 1.4s infinite both;
+      opacity: 0.5;
+      animation: typingBlink 1.5s infinite;
     }
-    .typing-dots span:nth-child(2) {
-      animation-delay: 0.2s;
-    }
-    .typing-dots span:nth-child(3) {
-      animation-delay: 0.4s;
-    }
-    @keyframes blink {
-      0%, 80%, 100% { opacity: 0; }
-      40% { opacity: 1; }
+    .typing span:nth-child(2) { animation-delay: 0.2s; }
+    .typing span:nth-child(3) { animation-delay: 0.4s; }
+
+    @keyframes typingBlink {
+      0%, 80%, 100% { opacity: 0.2; transform: translateY(0); }
+      40% { opacity: 1; transform: translateY(-2px); }
     }
 
-    /* Smooth fade-in for messages */
-    .fade-in {
-      animation: fadeIn 0.4s ease forwards;
-      opacity: 0;
+    /* Input styling */
+    #chat-input {
+      transition: all 0.2s ease;
     }
-    @keyframes fadeIn {
+    #chat-input:focus {
+      box-shadow: 0 0 10px rgba(99,102,241,0.5);
+      border-color: #6366f1;
+    }
+
+    /* Button hover glow */
+    #send-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 10px rgba(99,102,241,0.6);
+    }
+    #send-button:active {
+      transform: scale(0.95);
+    }
+
+    /* Smooth page entrance */
+    .fade-page {
+      animation: fadePage 0.5s ease-in-out;
+    }
+    @keyframes fadePage {
+      from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
-      from { opacity: 0; transform: translateY(5px); }
     }
 
-    /* Message hover lift */
-    .chat-bubble:hover {
-      transform: translateY(-2px);
-      transition: all 0.15s ease-in-out;
+    /* ChatGPT-like container */
+    .chat-box {
+      background-color: rgba(15, 23, 42, 0.8);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(99,102,241,0.15);
+      border-radius: 1rem;
     }
   </style>
 </head>
-<body class="bg-slate-900 text-slate-200 flex items-center justify-center min-h-screen">
 
+<body class="fade-page">
   <div class="max-w-2xl w-full mx-auto p-4">
-    <header class="text-center mb-6">
-      <h1 class="text-3xl font-bold text-indigo-400 animate-pulse">CortexLuma AI Chat</h1>
-      <p class="text-slate-400 mt-1">Ask me anything!</p>
+    <header class="text-center mb-4">
+      <h1 class="text-3xl font-bold text-indigo-400 animate-pulse">CortexLuma AI</h1>
+      <p class="text-slate-400 mt-1">Your Smart ChatGPT Jr Assistant 🤖</p>
     </header>
 
-    <div id="chat-messages" class="bg-slate-800 p-4 rounded-lg shadow-2xl h-[70vh] overflow-y-auto mb-4 flex flex-col space-y-4">
-      <div class="flex justify-start fade-in">
-        <div class="bg-indigo-600 p-3 rounded-xl rounded-tl-none max-w-xs md:max-w-lg text-sm shadow-md chat-bubble">
-          Hello! I'm <strong>CortexLuma</strong>, a Gemini-powered AI. How can I help you today?
+    <!-- Chat container -->
+    <div id="chat-messages" class="chat-box p-4 h-[70vh] overflow-y-auto mb-4 flex flex-col space-y-4 shadow-xl">
+      <div class="flex justify-start">
+        <div class="bg-slate-700 p-3 rounded-xl max-w-xs md:max-w-lg text-sm shadow chat-bubble">
+          Hey there 👋 I’m <span class="text-indigo-400 font-semibold">CortexLuma</span> — your AI buddy. How can I help?
         </div>
       </div>
     </div>
 
+    <!-- Input -->
     <form id="chat-form" class="flex flex-col space-y-2">
-      <div class="relative">
+      <div class="relative flex items-center">
         <textarea 
           id="chat-input" 
-          class="w-full p-3 pr-12 bg-slate-700 text-slate-200 border border-slate-600 rounded-lg resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition duration-150 overflow-hidden" 
-          rows="1" 
-          placeholder="Type your message..."
-          aria-label="Chat input"
+          class="flex-1 p-3 pr-12 bg-slate-800 border border-slate-700 rounded-lg text-slate-200 resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition duration-150 overflow-hidden"
+          rows="1"
+          placeholder="Send a message..."
           style="min-height: 44px; max-height: 200px;"
         ></textarea>
         <button 
-          type="submit" 
+          type="submit"
           id="send-button"
-          class="absolute right-2 bottom-2 bg-indigo-600 hover:bg-indigo-700 text-white p-2 rounded-full transition duration-150 disabled:opacity-50"
-          aria-label="Send message"
+          class="absolute right-3 bottom-2 bg-indigo-600 hover:bg-indigo-700 text-white p-2 rounded-full transition"
         >
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
             <path d="M3.105 2.548A2.25 2.25 0 0 0 .5 4.675v9.5c0 1.054.912 1.908 1.996 1.908h.084l.875 1.167a.75.75 0 0 0 1.173.044l.897-.978 10.63-7.589c.866-.62.866-1.927 0-2.547L6.53 1.359a.75.75 0 0 0-1.173.044l-.897.978-.084.108Z" />
             <path d="M10.873 9.75V7.5a.75.75 0 0 0-1.5 0v2.25H6.75a.75.75 0 0 0 0 1.5h2.623v2.25a.75.75 0 0 0 1.5 0v-2.25h2.623a.75.75 0 0 0 0-1.5h-2.623Z" />
           </svg>
@@ -111,76 +135,6 @@
     </form>
   </div>
     <script>
-
-        // Auto-resize textarea
-    input.addEventListener('input', () => {
-      input.style.height = 'auto';
-      input.style.height = (input.scrollHeight) + 'px';
-    });
-
-    // Allow Enter to send, Shift+Enter for newline
-    input.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter' && !e.shiftKey) {
-        e.preventDefault();
-        form.dispatchEvent(new Event('submit'));
-      }
-    });
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const text = input.value.trim();
-      if (!text) return;
-
-      // User message
-      addMessage(text, 'user');
-      input.value = '';
-      input.style.height = '44px';
-
-      // Typing animation placeholder
-      const thinking = addTyping();
-
-      // Simulated AI response delay
-      setTimeout(() => {
-        removeTyping(thinking);
-        addMessage("That's a great question! 🤖 CortexLuma is still learning.", 'ai');
-      }, 1200);
-    });
-
-    function addMessage(text, sender) {
-      const messageDiv = document.createElement('div');
-      messageDiv.classList.add('flex', 'fade-in', sender === 'user' ? 'justify-end' : 'justify-start');
-
-      const bubble = document.createElement('div');
-      bubble.classList.add(
-        'p-3', 'rounded-xl', 'shadow-md', 'chat-bubble',
-        sender === 'user' ? 'bg-indigo-500', 'rounded-tr-none', 'text-white', 'max-w-xs', 'md:max-w-lg' :
-        'bg-slate-700', 'rounded-tl-none', 'text-slate-100', 'max-w-xs', 'md:max-w-lg'
-      );
-
-      bubble.textContent = text;
-      messageDiv.appendChild(bubble);
-      messages.appendChild(messageDiv);
-      messages.scrollTop = messages.scrollHeight;
-    }
-
-    function addTyping() {
-      const typingDiv = document.createElement('div');
-      typingDiv.classList.add('flex', 'justify-start', 'fade-in');
-      typingDiv.innerHTML = `
-        <div class="bg-slate-700 p-3 rounded-xl rounded-tl-none max-w-xs md:max-w-lg text-sm shadow-md">
-          <div class="typing-dots"><span></span><span></span><span></span></div>
-        </div>`;
-      messages.appendChild(typingDiv);
-      messages.scrollTop = messages.scrollHeight;
-      return typingDiv;
-    }
-
-    function removeTyping(typingDiv) {
-      typingDiv.remove();
-    }
-        
-
-     
         const chatForm = document.getElementById('chat-form');
         const chatInput = document.getElementById('chat-input');
         const chatMessages = document.getElementById('chat-messages');
